# jamtart

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.validator  Makefile  README.md  bench-after.json  bench-baseline.json  build.sh  docker-compose.yml  quick-start.sh  start-telemetry.sh  start-validators.sh  status.sh
.cargo/: config.toml
.github/workflows/: bench.yml  ci.yml  release.yml
grafana/provisioning/dashboards/: dashboards.yml  tart-connectivity-check.json  tart-cores.json  tart-global.json  tart-node.json  tart-playground.json
grafana/provisioning/datasources/: datasource.yml
migrations/: 001_postgres_schema.sql  001_timescaledb_schema.sql  002_event_types.sql  002_performance_indexes.sql  003_frontend_analytics_indexes.sql  003_realtime_aggregates.sql  004_frontend_search_indexes.sql  005_performance_optimizations.sql  006_performance_indexes.sql  007_core_detail_indexes.sql
profile-results/: cpu-profile.txt  run-info.txt  stress-cpu-profile.txt  throughput.txt
scripts/: profile.sh  stress.sh
src/: api.rs  batch_writer.rs  cache.rs  circuit_breaker.rs  decoder.rs  encoding.rs  event_broadcaster.rs  events.rs  health.rs  jam_rpc.rs  lib.rs  main.rs  node_id.rs  rate_limiter.rs  retry.rs  server.rs  store.rs  types.rs
tests/: README.md  api_tests.rs  encoding_tests.rs  error_tests.rs  events_tests.rs  integration_tests.rs  optimized_server_tests.rs  simple_db_test.rs  types_tests.rs  ws_tests.rs
tests/common/: mod.rs
