[package]
name = "tart-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tart-backend"
path = "src/main.rs"

[[bin]]
name = "tart-dash"
path = "src/bin/tart-dash.rs"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
bytes = "1.7"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "chrono"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Utilities
dashmap = "6.0"
futures = "0.3"
pin-project = "1.1"
hex = "0.4"
rand = "0.8"

# Performance optimizations
crossbeam-channel = "0.5"
parking_lot = "0.12"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Dashboard dependencies
ratatui = "0.26"
crossterm = "0.27"
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }

[dev-dependencies]
axum-test = "15.0"