[package]
name = "tart-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tart-backend"
path = "src/main.rs"

[[bin]]
name = "tart-dash"
path = "src/bin/tart-dash.rs"
required-features = ["dashboard"]

[[bin]]
name = "tart-bench"
path = "src/bin/bench.rs"
required-features = ["bench"]

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["rt-multi-thread", "sync", "time", "macros", "io-util", "net", "signal"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = { version = "0.4" }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip", "compression-br", "set-header", "timeout", "limit"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
bytes = "1.7"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "chrono"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Utilities
dashmap = "6.0"
futures = "0.3"
hex = "0.4"
rand = "0.8"

# Performance optimizations
parking_lot = "0.12"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
tikv-jemallocator = { version = "0.6", optional = true }

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Dashboard dependencies (feature-gated to avoid bloating main binary)
ratatui = { version = "0.26", optional = true }
crossterm = { version = "0.27", optional = true }
clap = { version = "4.4", features = ["derive", "env"], optional = true }
reqwest = { version = "0.11", features = ["json", "blocking"], optional = true }

# Benchmark dependencies (feature-gated)
hdrhistogram = { version = "7.5", optional = true }
tokio-tungstenite = { version = "0.24", optional = true }

# JAM RPC client dependencies
jam-std-common = "0.1.26"
jam-types = { version = "0.1.26", default-features = false, features = ["std"] }
jam-tooling = "0.1.26"
jam-program-blob-common = { version = "0.1.26", default-features = false, features = ["std"] }
jam-codec = { version = "0.1.1", default-features = false, features = ["derive", "max-encoded-len"] }
jsonrpsee = { version = "0.24.2", default-features = false, features = ["http-client", "ws-client"] }
url = "2.5"

[features]
default = ["jemalloc"]
jemalloc = ["tikv-jemallocator"]
dashboard = ["ratatui", "crossterm", "clap", "reqwest"]
bench = ["reqwest", "hdrhistogram", "tokio-tungstenite"]

[dev-dependencies]
axum-test = "15.0"
tokio-tungstenite = "0.24"
futures-util = "0.3"

[profile.dev]
opt-level = 1
incremental = true
lto = false
codegen-units = 256

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"